# nettest

./: CMakeLists.txt  README.md  binpacks.txt  classical.yaml  do_ensure_data.sh  do_generate_nnue.sh  do_generate_schedule.sh  do_generate_yaml_schedule.py  do_run_match.sh  do_step.py  do_testing.py  ensure_data.py  example.yaml  execute_recipe.py  generate_pipeline.py  hello.cpp  large.yaml  optimize.py  pyproject.toml  recipe.yaml  small.yaml  speedtest_threats.yaml  test.py  testing.yaml  testing_large.yaml  threats.yaml  threats_meta.yaml  threats_mini.yaml  threats_minimal.yaml  train.py  utils.py
.github/workflows/: yaml-diff-comment.yml
ci/: cscs.yml
ci/docker/: Dockerfile.AMD  Dockerfile.NVIDIA  Dockerfile.base  Dockerfile.build
environments/: clariden.yaml  local.yaml
nettest/: __init__.py  default_environment.py  ensure_data.py  execute_recipe.py  generate_pipeline.py  meta_recipe.py  test.py  train.py  utils.py
optimize/: optimize.py
unittests/: meta_recipy_test.py
